corrected-mouseover-flicker
corrected text layover and adjusted css to try to stop mouseover
flickering.

--- a/recipe/recipe.css
+++ b/recipe/recipe.css
@@ -1,11 +1,45 @@
+* {
+  font-family: 'Raleway', sans-serif;
+}
+
+/*body{
+  font-size: 100%;
+}*/
+
+
+@media only screen and (max-width: 400px) {
+  body { font-size:90%;}
+}
+
+@media only screen and (max-width: 800px) {
+  body { font-size:100%;}
+}  
+     
+@media only screen and (max-width: 1100px) {
+  body { font-size:120%;}
+} 
+
+ @media only screen and (min-width: 1100px) {
+  body { font-size:120%;}
+  .wrap {max-width:770px;}
+}
+
+@media only screen and (max-width: 320px) {
+
+   body { font-size: 2em; }
+
+}
+
+
+
 h1{
     text-align: center;
     color: #505050;
-    font-family: "Arial Black",  sans-serif;
     background-color: #E8E8E8; 
     border: 15px solid #E8E8E8;
 }
-.photos {
+#photo {
+  position: relative;
   /* Prevent vertical gaps */
   line-height: 170%;
   -webkit-row-gap:      10px;
@@ -18,3 +52,79 @@ h1{
   row-gap:              10px;
   padding: 10px;
   }
+
+/*.images{
+  position: relative;
+
+}
+.nameheader{
+  display: inline;
+  position: absolute;
+  top: 200px;
+  left: 50px;
+}
+.noheader{
+  display: none;
+  position: absolute;
+  top: 200px;
+  left: 50px;
+}*/
+
+h2 {
+  position: absolute;
+  top: 50px;
+  width: 100%;
+  left: 100px;
+  right: 100px;
+  text-decoration: none;
+  /*color: transparent;*/
+}
+span{
+  position: relative;
+  /*display: none;*/
+  visibility: hidden;
+  font-size: 30px;
+  bottom:180px;
+  /*top: 50px;*/
+  /*width: 100%;*/
+  left: 100px;
+  right: 100px;
+  text-decoration: none;
+  /*color: transparent;*/
+  
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+h2:hover
+{
+    color: black;
+}
+
+/*.contenthover { 
+  padding:20px 20px 10px 20px; 
+}
+.contenthover, .contenthover h3, contenthover a { 
+  color:#fff; 
+}
+.contenthover h3, .contenthover p { 
+  margin:0 0 10px 0; 
+  line-height:1.4em; 
+  padding:0; 
+}
+.contenthover a.mybutton { 
+  display:block; 
+  float:left; 
+  padding:5px 10px; 
+  background:#3c9632; 
+  color:#fff; 
+  -moz-border-radius: 4px; 
+  -webkit-border-radius: 4px; 
+  border-radius: 4px; 
+}
+.contenthover a.mybutton:hover { 
+  background:#34742d 
+}*/
